Use more mocks